--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "express-session": "^1.14.0",
     "mongoose": "^4.5.8",
     "morgan": "~1.6.1",
+    "multer": "^1.2.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "serve-favicon": "~2.3.0"
   }
 }
