add ACL + fix form animal

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "acl": "^0.4.9",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.13.2",
     "connect-flash": "^0.1.1",
@@ -15,6 +16,7 @@
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "express-session": "^1.14.0",
+    "mongodb": "^2.2.5",
     "mongoose": "^4.5.8",
     "morgan": "~1.6.1",
     "multer": "^1.2.0",
