--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "~1.3.5",
+    "crypto-js": "^3.1.6",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
