--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "acl": "^0.4.9",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.13.2",
+    "canvas": "^1.5.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "~1.3.5",
