--- a/app/service.js.example
+++ b/app/service.js.example
@@ -1,11 +1,67 @@
-app.factory('AuthService', ['$http', function($http){
+app.factory('AuthService', ['$http','$route', 'cfpLoadingBar', function($http, $route, cfpLoadingBar){
 	
 	return ({
 		// hostAnimal : 'http://localhost:8000/content/dong-vat/auto',
 		hostName: 'http://localhost:8000',
-		deleteP: deleteP
+		deleteP: deleteP,
+		addSample: addSample, 
+		arrAuto: [	'tenDongNghia','gioi',
+					'nganh', 'lop', 
+					'phanLop', 
+					'bo', 
+					'phanBo', 
+					'lienHo',
+					'ho',
+					'phanHo',
+					'toc', 
+					'giong', 
+					'loai', 
+					'duoiLoai', 
+					'coQuanThuMau', 
+					'quocGia', 'tinh', 
+					'huyen', 'xa', 'thon', 
+					'coQuanToChucPhanTich', 
+					'coQuanXuLy'
+					,'boPhanLayMauDNA', 
+					'trangThaiGiuMauDNA',
+					'coQuanNhapVatMau']
 	});
 
+	function addSample(fd, url, urlRe){
+		$.ajax({
+				url: url,
+				method: 'POST',
+				contentType: false,
+				processData: false,
+				data: fd,
+				success: function (data) {
+					cfpLoadingBar.complete();
+					alert(data.status);
+					window.location = urlRe;
+				},
+				error: function (err) {
+					cfpLoadingBar.complete();
+					cfpLoadingBar.set(0);
+					console.log(err);
+					alert(JSON.parse(err.responseText).error);
+					var element = document.getElementsByName(JSON.parse(err.responseText).field)[0];
+					try {
+						element.style.background = '#EE543A';
+						setTimeout((function (e) {
+							return function () {
+								e.style.background = 'white';
+							}
+						})(element), 2000);
+						$('html, body').animate({
+							scrollTop: $(element).offset().top - 100
+						}, 500);
+					}
+					catch (e){
+						// do not care
+					}
+				}
+			});
+	}
 	function deleteP(id, urlDelete){
 		$http({
 			method: 'DELETE',
