--- a/app/service.js.example
+++ b/app/service.js.example
@@ -2,9 +2,10 @@ app.factory('AuthService', ['$http','$route', 'cfpLoadingBar', function($http, $
 	
 	return ({
 		// hostAnimal : 'http://localhost:8000/content/dong-vat/auto',
-		hostName: 'http://localhost:8000',
+		hostName: 'http://188.166.228.19',
 		deleteP: deleteP,
-		addSample: addSample, 
+		addSample: addSample,
+		editForm: editForm,
 		arrAuto: [	'tenDongNghia','gioi',
 					'nganh', 'lop', 
 					'phanLop', 
@@ -35,13 +36,13 @@ app.factory('AuthService', ['$http','$route', 'cfpLoadingBar', function($http, $
 				processData: false,
 				data: fd,
 				success: function (data) {
-					cfpLoadingBar.complete();
+					// cfpLoadingBar.complete();
 					alert(data.status);
 					window.location = urlRe;
 				},
 				error: function (err) {
-					cfpLoadingBar.complete();
-					cfpLoadingBar.set(0);
+					// cfpLoadingBar.complete();
+					// cfpLoadingBar.set(0);
 					console.log(err);
 					alert(JSON.parse(err.responseText).error);
 					var element = document.getElementsByName(JSON.parse(err.responseText).field)[0];
@@ -61,6 +62,42 @@ app.factory('AuthService', ['$http','$route', 'cfpLoadingBar', function($http, $
 					}
 				}
 			});
+	}
+
+	function editForm(fd, url, urlRe){
+			$.ajax({
+			url: url,
+			method: 'PUT',
+			contentType: false,
+			processData: false,
+			data: fd,
+			success: function (data) {
+				// cfpLoadingBar.complete();
+				alert(data.status);
+				window.location = urlRe;
+			},
+			error: function (err) {
+				// cfpLoadingBar.complete();
+				// cfpLoadingBar.set(0);
+				console.log(err);
+				alert(JSON.parse(err.responseText).error);
+				var element = document.getElementsByName(JSON.parse(err.responseText).field)[0];
+				try {
+					element.style.background = '#EE543A';
+					setTimeout((function (e) {
+						return function () {
+							e.style.background = 'white';
+						}
+					})(element), 2000);
+					$('html, body').animate({
+						scrollTop: $(element).offset().top - 100
+					}, 500);
+				}
+				catch (e){
+					// do not care
+				}
+			}
+		});
 	}
 	function deleteP(id, urlDelete){
 		$http({
