--- a/app/service.js.example
+++ b/app/service.js.example
@@ -6,6 +6,7 @@ app.factory('AuthService', ['$http','$route', 'cfpLoadingBar', function($http, $
 		deleteP: deleteP,
 		addSample: addSample,
 		editForm: editForm,
+		exportFile: exportFile,
 		arrAuto: [	'tenDongNghia','gioi',
 					'nganh', 'lop', 
 					'phanLop', 
@@ -28,6 +29,25 @@ app.factory('AuthService', ['$http','$route', 'cfpLoadingBar', function($http, $
 					'coQuanNhapVatMau']
 	});
 
+	function exportFile(id){
+		var arr = document.getElementsByClassName("check-box");
+		var urls = [];
+		angular.forEach(arr, function (value) {
+			
+			if (value.checked) {
+				urls.push(value.getAttribute("data-id") + id);
+			}
+		});
+		function createCB(index) {
+			return function () {
+				window.location.href = urls[index];
+			}
+		}
+		for(var i = 0; i < urls.length; i++){
+			setTimeout(createCB(i), 2000 * i)
+		}
+	}
+
 	function addSample(fd, url, urlRe){
 		$.ajax({
 				url: url,
@@ -36,13 +56,13 @@ app.factory('AuthService', ['$http','$route', 'cfpLoadingBar', function($http, $
 				processData: false,
 				data: fd,
 				success: function (data) {
-					// cfpLoadingBar.complete();
+					cfpLoadingBar.complete();
 					alert(data.status);
 					window.location = urlRe;
 				},
 				error: function (err) {
-					// cfpLoadingBar.complete();
-					// cfpLoadingBar.set(0);
+					cfpLoadingBar.complete();
+					cfpLoadingBar.set(0);
 					console.log(err);
 					alert(JSON.parse(err.responseText).error);
 					var element = document.getElementsByName(JSON.parse(err.responseText).field)[0];
@@ -72,13 +92,13 @@ app.factory('AuthService', ['$http','$route', 'cfpLoadingBar', function($http, $
 			processData: false,
 			data: fd,
 			success: function (data) {
-				// cfpLoadingBar.complete();
+				cfpLoadingBar.complete();
 				alert(data.status);
 				window.location = urlRe;
 			},
 			error: function (err) {
-				// cfpLoadingBar.complete();
-				// cfpLoadingBar.set(0);
+				cfpLoadingBar.complete();
+				cfpLoadingBar.set(0);
 				console.log(err);
 				alert(JSON.parse(err.responseText).error);
 				var element = document.getElementsByName(JSON.parse(err.responseText).field)[0];
