--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.8",
     "morgan": "~1.6.1",
+    "msexcel-builder": "0.0.2",
     "multer": "^1.2.0",
     "officegen": "^0.4.0",
     "passport": "^0.3.2",
