--- a/app/service.js.example
+++ b/app/service.js.example
@@ -291,7 +291,7 @@ app.factory('AuthService', ['$http','$route', 'cfpLoadingBar', function($http, $
 
 	function fetchFlexdatalist(_scope) {
 		setTimeout(function () {
-			console.log('render1')
+			// console.log('render1')
 			// Render
 			$('.flexdatalist').flexdatalist({
 				toggleSelected: true
@@ -301,29 +301,30 @@ app.factory('AuthService', ['$http','$route', 'cfpLoadingBar', function($http, $
 			$('.flexdatalist').flexdatalist({
 				toggleSelected: true
 			});
-			console.log('done render');
+			console.log('flexdatalist ok');
 
 			// After rendering flexdatalist, giaTriSuDung will be focused.
 			// Call this to scroll to top.
 			$('html, body').animate({
 				scrollTop: $(document.getElementsByTagName('html')[0]).offset().top
 			}, 100);
-		}, 2000);
+		}, 1000);
 	}
 
 	function initDatePicker(_scopeData) {
+		// console.log('datepicker triggered')
 		setTimeout(function () {
 			if (_scopeData){
-				
+				// console.log('start fetching')
 				// Edit Form
 				$('.datepicker').each(function (index, element) {
 					try {
 						if (element.nodeName.toUpperCase() == 'INPUT'){
 							var name = element.getAttribute('name');
-							console.log(name);
+							// console.log(name);
 							var date = new Date(_scopeData[name]);
 							_scopeData[name] = date.getDate() + '/' + (date.getMonth() + 1) + '/' + date.getFullYear();
-							console.log(date.getDate() + '/' + (date.getMonth() + 1) + '/' + date.getFullYear())
+							// console.log(date.getDate() + '/' + (date.getMonth() + 1) + '/' + date.getFullYear())
 						}
 					}
 					catch (e){
