--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "express-session": "^1.14.0",
+    "fs-extra": "^2.0.0",
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.8",
     "morgan": "~1.6.1",
