--- a/config/config.js.example
+++ b/config/config.js.example
@@ -3,9 +3,9 @@ module.exports = {
 		port: '8000'
 	},
 	database: {
-		url: 'mongodb://ngocdon:123123@127.0.0.1:27017/museum'
+		url: 'mongodb://mongodbuser:mongodbpassword@127.0.0.1:27017/museum'
 	},
 	environment: {
-		env: 'production'
+		env: 'development'
 	}
 }
