Add autocompelete some field

--- a/app/service.js.example
+++ b/app/service.js.example
@@ -31,7 +31,11 @@ app.factory('AuthService', ['$http','$route', 'cfpLoadingBar', function($http, $
 					'trangThaiGiuMauDNA',
 					'coQuanNhapVatMau',
 					'giaTriSuDung',
-					'hinhThucNhapMau']
+					'hinhThucNhapMau',
+					'tong',
+					'chi',
+					'phanChi',
+					'loai']
 	});
 
 	function exportFile(id){
