--- a/app/service.js.example
+++ b/app/service.js.example
@@ -37,6 +37,7 @@ app.factory('AuthService', ['$http','$route', 'cfpLoadingBar', function($http, $
 					'tong',
 					'chi',
 					'phanChi',
+					'chiGiong',
 					'loai',
 					'noiLuuTruMau',
 					'viTriLayMauDNA',
