fix Animal issue

--- a/app/service.js.example
+++ b/app/service.js.example
@@ -11,37 +11,40 @@ app.factory('AuthService', ['$http','$route', 'cfpLoadingBar', function($http, $
 		renderFlexdatalist: renderFlexdatalist,
 		fetchFlexdatalist: fetchFlexdatalist,
 		initDatePicker: initDatePicker,
-		arrAuto: [	'tenDongNghia','gioi',
-					'nganh', 'lop', 
-					'phanLop', 
-					'bo', 
-					'phanBo', 
-					'lienHo',
-					'ho',
-					'phanHo',
-					'toc', 
-					'giong', 
-					'phanGiong',
-					'loai', 
-					'duoiLoai', 
-					'coQuanThuMau', 
-					'quocGia', 'tinh', 
-					'huyen', 'xa', 'thon', 
-					'coQuanToChucPhanTich', 
-					'coQuanToChucGiamDinh',
-					'coQuanXuLy',
-					'boPhanLayMauDNA', 
-					'trangThaiGiuMauDNA',
-					'coQuanNhapVatMau',
-					'giaTriSuDung',
-					'tong',
-					'chi',
-					'phanChi',
-					'chiGiong',
-					'loai',
-					'noiLuuTruMau',
-					'viTriLayMauDNA',
-					'mauDNA'
+		arrAuto: [	
+			'tenDongNghia',
+			'tenTheoBaoTang',
+			'gioi',
+			'nganh', 'lop', 
+			'phanLop', 
+			'bo', 
+			'phanBo', 
+			'lienHo',
+			'ho',
+			'phanHo',
+			'toc', 
+			'giong', 
+			'phanGiong',
+			'loai', 
+			'duoiLoai', 
+			'coQuanThuMau', 
+			'quocGia', 'tinh', 
+			'huyen', 'xa', 'thon', 
+			'coQuanToChucPhanTich', 
+			'coQuanToChucGiamDinh',
+			'coQuanXuLy',
+			'boPhanLayMauDNA', 
+			'trangThaiGiuMauDNA',
+			'coQuanNhapVatMau',
+			'giaTriSuDung',
+			'tong',
+			'chi',
+			'phanChi',
+			'chiGiong',
+			'loai',
+			'noiLuuTruMau',
+			'viTriLayMauDNA',
+			'mauDNA'
 		]
 	});
 
