--- a/app/service.js.example
+++ b/app/service.js.example
@@ -11,6 +11,8 @@ app.factory('AuthService', ['$http','$route', 'cfpLoadingBar', function($http, $
 		renderFlexdatalist: renderFlexdatalist,
 		fetchFlexdatalist: fetchFlexdatalist,
 		initDatePicker: initDatePicker,
+		startSpinner: startSpinner,
+		stopSpinner: stopSpinner,
 		arrAuto: [	
 			'tenDongNghia',
 			'tenTheoBaoTang',
@@ -178,11 +180,13 @@ app.factory('AuthService', ['$http','$route', 'cfpLoadingBar', function($http, $
 				data: fd,
 				success: function (data) {
 					cfpLoadingBar.complete();
+					stopSpinner();
 					alert(data.status);
 					window.location = urlRe;
 				},
 				error: function (err) {
 					cfpLoadingBar.complete();
+					stopSpinner();
 					cfpLoadingBar.set(0);
 					console.log(err);
 					alert(JSON.parse(err.responseText).error);
@@ -214,12 +218,14 @@ app.factory('AuthService', ['$http','$route', 'cfpLoadingBar', function($http, $
 			data: fd,
 			success: function (data) {
 				cfpLoadingBar.complete();
+				stopSpinner();
 				alert(data.status);
 				window.location = urlRe;
 			},
 			error: function (err) {
 				cfpLoadingBar.complete();
 				cfpLoadingBar.set(0);
+				stopSpinner();
 				console.log(err);
 				alert(JSON.parse(err.responseText).error);
 				var element = document.getElementsByName(JSON.parse(err.responseText).field)[0];
@@ -375,9 +381,51 @@ app.factory('AuthService', ['$http','$route', 'cfpLoadingBar', function($http, $
 		
 	}
 
+	function startSpinner() {
+		if (SPINNER){
+			SPINNER.stop();
+		}
+		var opts = {
+			  lines: 13 // The number of lines to draw
+			, length: 28 // The length of each line
+			, width: 14 // The line thickness
+			, radius: 42 // The radius of the inner circle
+			, scale: 2.25 // Scales overall size of the spinner
+			, corners: 1 // Corner roundness (0..1)
+			, color: '#000' // #rgb or #rrggbb or array of colors
+			, opacity: 0.25 // Opacity of the lines
+			, rotate: 0 // The rotation offset
+			, direction: 1 // 1: clockwise, -1: counterclockwise
+			, speed: 1.8 // Rounds per second
+			, trail: 60 // Afterglow percentage
+			, fps: 20 // Frames per second when using setTimeout() as a fallback for CSS
+			, zIndex: 2e9 // The z-index (defaults to 2000000000)
+			, className: 'spinner' // The CSS class to assign to the spinner
+			, top: '95%' // Top position relative to parent
+			, left: '50%' // Left position relative to parent
+			, shadow: false // Whether to render a shadow
+			, hwaccel: false // Whether to use hardware acceleration
+			, position: 'absolute' // Element positioning
+		}
+		// var target = document.getElementById('form-content');
+		target = document.getElementById('form-content');
+		// console.log('starting spinner');
+		// console.log(target)
+		SPINNER = new Spinner(opts).spin(target);
+		// console.log('start spinning');
+		$('html, body').animate({
+			scrollTop: $(document.getElementsByClassName('spinner')[0]).offset().top
+		}, 500);
+	}
+
+	function stopSpinner() {
+		SPINNER.stop();
+	}
+
 }]);
 
 var STR_AUTOCOMPLETION_SEPERATOR = '_-_' // Phải đồng bộ với biến cùng tên trong file init.js
+var SPINNER = null;
 
 //Autocomplete
 // app.directive('autoComplete', function($timeout) {
