--- a/app/service.js.example
+++ b/app/service.js.example
@@ -173,44 +173,49 @@ app.factory('AuthService', ['$http','$route', 'cfpLoadingBar', function($http, $
 
 	function addSample(fd, url, urlRe){
 		$.ajax({
-				url: url,
-				method: 'POST',
-				contentType: false,
-				processData: false,
-				data: fd,
-				success: function (data) {
-					cfpLoadingBar.complete();
-					stopSpinner();
+			url: url,
+			method: 'POST',
+			contentType: false,
+			processData: false,
+			data: fd,
+			success: function (data) {
+				cfpLoadingBar.complete();
+				stopSpinner();
+				setTimeout(function () { // Stop spinner before alerting
 					alert(data.status);
 					window.location = urlRe;
-				},
-				error: function (err) {
-					cfpLoadingBar.complete();
-					stopSpinner();
-					cfpLoadingBar.set(0);
-					console.log(err);
+				}, 100)
+			},
+			error: function (err) {
+				cfpLoadingBar.complete();
+				stopSpinner();
+				cfpLoadingBar.set(0);
+				setTimeout(function () { // Stop spinner before alerting
 					alert(JSON.parse(err.responseText).error);
-					var element = document.getElementsByName(JSON.parse(err.responseText).field)[0];
-					try {
-						element.style.background = '#EE543A';
-						setTimeout((function (e) {
-							return function () {
-								e.style.background = 'white';
-							}
-						})(element), 2000);
-						$('html, body').animate({
-							scrollTop: $(element).offset().top - 100
-						}, 500);
-					}
-					catch (e){
-						// do not care
-					}
+				}, 100)
+				console.log(err);
+
+				var element = document.getElementsByName(JSON.parse(err.responseText).field)[0];
+				try {
+					element.style.background = '#EE543A';
+					setTimeout((function (e) {
+						return function () {
+							e.style.background = 'white';
+						}
+					})(element), 2000);
+					$('html, body').animate({
+						scrollTop: $(element).offset().top - 100
+					}, 500);
 				}
-			});
+				catch (e){
+					// do not care
+				}
+			}
+		});
 	}
 
 	function editForm(fd, url, urlRe){
-			$.ajax({
+		$.ajax({
 			url: url,
 			method: 'PUT',
 			contentType: false,
@@ -219,15 +224,19 @@ app.factory('AuthService', ['$http','$route', 'cfpLoadingBar', function($http, $
 			success: function (data) {
 				cfpLoadingBar.complete();
 				stopSpinner();
-				alert(data.status);
-				window.location = urlRe;
+				setTimeout(function () { // Stop spinner before alerting
+					alert(data.status);
+					window.location = urlRe;
+				}, 100)
 			},
 			error: function (err) {
 				cfpLoadingBar.complete();
 				cfpLoadingBar.set(0);
 				stopSpinner();
 				console.log(err);
-				alert(JSON.parse(err.responseText).error);
+				setTimeout(function () { // Stop spinner before alerting
+					alert(JSON.parse(err.responseText).error);
+				}, 100)
 				var element = document.getElementsByName(JSON.parse(err.responseText).field)[0];
 				try {
 					element.style.background = '#EE543A';
@@ -416,6 +425,10 @@ app.factory('AuthService', ['$http','$route', 'cfpLoadingBar', function($http, $
 		$('html, body').animate({
 			scrollTop: $(document.getElementsByClassName('spinner')[0]).offset().top
 		}, 500);
+
+		setTimeout(function () {
+			// stopSpinner();
+		}, 2000)
 	}
 
 	function stopSpinner() {
