add autocomplete fields

--- a/app/service.js.example
+++ b/app/service.js.example
@@ -16,6 +16,9 @@ app.factory('AuthService', ['$http','$route', 'cfpLoadingBar', function($http, $
 		arrAuto: [	
 			'tenDongNghia',
 			'tenTheoBaoTang',
+			'tenVietNam',
+			'tenPhoThong',
+			'tenDiaPhuong',
 			'gioi',
 			'nganh', 'lop', 
 			'phanLop', 
@@ -29,9 +32,7 @@ app.factory('AuthService', ['$http','$route', 'cfpLoadingBar', function($http, $
 			'phanGiong',
 			'loai', 
 			'duoiLoai', 
-			'coQuanThuMau', 
-			'quocGia', 'tinh', 
-			'huyen', 'xa', 'thon', 
+			'coQuanThuMau', 'thon', 
 			'coQuanToChucPhanTich', 
 			'coQuanToChucGiamDinh',
 			'coQuanXuLy',
