--- a/app/service.js.example
+++ b/app/service.js.example
@@ -19,6 +19,7 @@ app.factory('AuthService', ['$http','$route', 'cfpLoadingBar', function($http, $
 			'tenVietNam',
 			'tenPhoThong',
 			'tenDiaPhuong',
+			'tenTiengAnh',
 			'gioi',
 			'nganh', 'lop', 
 			'phanLop', 
